--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,6 @@
     "reactstrap": "^8.4.1",
     "socket.io-client": "^2.3.0",
     "socketio": "^1.0.0",
-    "storybook": "^5.3.13",
     "styled-components": "^5.0.1",
     "youtube-api-search": "^0.0.5"
   },
@@ -29,9 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,13 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@storybook/addon-actions": "^5.3.13",
-    "@storybook/addon-knobs": "^5.3.13",
-    "@storybook/addon-links": "^5.3.13",
-    "@storybook/addons": "^5.3.13",
-    "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.13"
   }
 }
