--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,13 @@
 FROM node:alpine
 
-WORKDIR '/app'
+WORKDIR /usr/src/app
 
-COPY package.json .
-COPY . .
+COPY package.json yarn.lock ./
+RUN yarn
+COPY . ./
+RUN yarn build
+
+FROM nginx:alpine
+COPY /usr/src/app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
