--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,16 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "datepicker": "^0.0.0",
     "express": "^4.17.1",
     "googleapis": "^48.0.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0",
+    "react-calendar": "^3.0.1",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-material-ui-carousel": "^1.4.3",
     "react-player": "^1.15.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
