--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-player": "^1.15.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-youtube": "^7.11.2",
     "reactstrap": "^8.4.1",
     "socket.io-client": "^2.3.0",
     "socketio": "^1.0.0",
