--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "datepicker": "^0.0.0",
     "express": "^4.17.1",
     "googleapis": "^48.0.0",
+    "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0",
     "react-calendar": "^3.0.1",
