--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/wingdb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/wingdb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=mysql
+spring.datasource.url=jdbc:mysql://database-1.cvb6wezkoypo.ap-northeast-2.rds.amazonaws.com:3306/wingdb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=wingdb
+spring.datasource.password=wingproject
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.devtools.add-properties=false
