--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "datepicker": "^0.0.0",
     "express": "^4.17.1",
     "googleapis": "^48.0.0",
+    "howler": "^2.2.0",
     "query-string": "^6.12.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0",
@@ -21,6 +22,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-material-ui-carousel": "^1.4.3",
+    "react-mp3-player": "^0.8.2",
     "react-player": "^1.15.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
